@@ -1,3 +1,14 @@
+2007-03-18  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* tests/tc_itunes.rb,
+	  tests/tc_textedit.rb,
+	  src/lib/rbosa.rb:
+	- Fixed 'msng' type conversions ;
+	- Added the possibility to retrieve a list of attributes of a descriptor
+	  list ;
+	- Added Ruby <-> OSA conversions for color type ;
+	- Added test cases. 
+
 2007-03-08  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* bin/rdoc-osa:
